--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/OperationPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/OperationPage.xaml
@@ -28,6 +28,8 @@
         <Button Content="PickPhoto" Click="PickPhoto_Click" VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="12,0,12,0"/>
         <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom">
             <Button Content="Widget" Click="Widget_Click" />
+            <Button Content="Widget2" Click="Widget2_Click" />
+
             <Button Content="OK" Click="OK_Click" />
         </StackPanel>
 
