--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/WidgetPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/WidgetPage.xaml
@@ -45,9 +45,9 @@
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
-                                <Image Grid.Column="0" Stretch="Uniform" util:IsoImg.Path="{Binding ItemOne.thumbnail}" Margin="12,0,0,12"/>
-                                <Image Grid.Column="1" Stretch="Uniform" util:IsoImg.Path="{Binding ItemTwo.thumbnail}" Margin="12,0,0,12"/>
-                                <Image Grid.Column="2" Stretch="Uniform" util:IsoImg.Path="{Binding ItemThree.thumbnail}" Margin="12,0,12,12"/>
+                                <Image Grid.Column="0" Stretch="Uniform" Tapped="material_Tapped" Tag="one" util:IsoImg.Path="{Binding ItemOne.thumbnail}" Margin="12,0,0,12"/>
+                                <Image Grid.Column="1" Stretch="Uniform" Tapped="material_Tapped" Tag="two" util:IsoImg.Path="{Binding ItemTwo.thumbnail}" Margin="12,0,0,12"/>
+                                <Image Grid.Column="2" Stretch="Uniform" Tapped="material_Tapped" Tag="three" util:IsoImg.Path="{Binding ItemThree.thumbnail}" Margin="12,0,12,12"/>
                             </Grid>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
