--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/HomePage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/HomePage.xaml
@@ -13,7 +13,7 @@
 	
 	</Page.Resources>
 
-    <Grid>
+    <Grid Background="White">
         <!--buttons-->
         <Grid x:Name="buttonsPanel" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Gray" RenderTransformOrigin="0.5,0.5">
         	<Grid.RenderTransform>
@@ -36,7 +36,9 @@
         <!--<sharedControl:ImageSwitch x:Name="imageSwitch" VerticalAlignment="Bottom"
                                    CheckStateChanged="ImageSwitch_CheckStateChanged"
                                    Enabled="True"/>-->
-        
+        <TextBox VerticalAlignment="Bottom" Width="200" Height="80"
+                 Background="Transparent" BorderBrush="Transparent"
+                 Text="hello"/>
 
     </Grid>
 </Page>
