--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/HomePage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/HomePage.xaml
@@ -8,12 +8,9 @@
     mc:Ignorable="d">
 	<Page.Resources>
 	
-	
-	
-	
 	</Page.Resources>
 
-    <Grid Background="White">
+    <Grid Background="Wheat">
         <!--buttons-->
         <Grid x:Name="buttonsPanel" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Gray" RenderTransformOrigin="0.5,0.5">
         	<Grid.RenderTransform>
@@ -36,9 +33,6 @@
         <!--<sharedControl:ImageSwitch x:Name="imageSwitch" VerticalAlignment="Bottom"
                                    CheckStateChanged="ImageSwitch_CheckStateChanged"
                                    Enabled="True"/>-->
-        <TextBox VerticalAlignment="Bottom" Width="200" Height="80"
-                 Background="Transparent" BorderBrush="Transparent"
-                 Text="hello"/>
-
+        <sharedControl:SpriteTextBox />
     </Grid>
 </Page>
