--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.Shared/App.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.Shared/App.xaml
@@ -8,6 +8,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Style/AppStyles.xaml"/>
+                <ResourceDictionary Source="Style/JumpListStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
