--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.Shared/Control/SpriteTextBox.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.Shared/Control/SpriteTextBox.xaml
@@ -6,8 +6,9 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Height="100"
-    Width="300">
+    MinHeight="80"
+    MinWidth="300"
+    HorizontalAlignment="Center" VerticalAlignment="Center">
     
     <Grid x:Name="rootGrid" Background="Transparent">
         <TextBlock x:Name="virginTextBlock" Text="点击输入文字" 
@@ -16,18 +17,16 @@
                    FontSize="44" Foreground="#ff000000" />
         <TextBox x:Name="textBoxVisual" IsHitTestVisible="False"
                  TextWrapping="Wrap"
-                 Width="300"
                  TextAlignment="Center"
                  Background="Transparent"
                  BorderThickness="0" BorderBrush="Transparent"
-                 FontSize="44" Foreground="#ff000000" Text="" VerticalAlignment="Center" MaxHeight="100" />
+                 FontSize="44" Foreground="#ff000000" Text="" VerticalAlignment="Center" />
         <TextBox x:Name="textBox" Opacity="0"
                  TextWrapping="Wrap"
-                 Width="300"
                  TextAlignment="Center"
                  Background="Transparent"
                  BorderThickness="0" BorderBrush="Transparent"
-                 FontSize="44" Foreground="#ff000000" Text="" VerticalAlignment="Center" MaxHeight="100" 
+                 FontSize="44" Foreground="#ff000000" Text="" VerticalAlignment="Center" 
                  TextChanged="textBox_TextChanged"/>
         <Rectangle x:Name="mask" Fill="#00000000" 
                    Tapped="mask_Tapped"
